# Preacher

./: README.md
src/: README.md  declarations.py  main.py  move.py  parser.py  pyproject.toml
